tests/ui/errors/com_builder_spans.stderr
warning: use of deprecated method `leptos::ForPropsBuilder::<IF, I, T, EF, N, KF, K, ((IF,), (), __children)>::build`: Missing required field key
  --> tests/ui/errors/com_builder_spans.rs:10:9
   |
10 |         For each=[[1, 2, 3]] |i| { {i} }
   |         ^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/errors/com_builder_spans.rs:10:9
   |
10 |         For each=[[1, 2, 3]] |i| { {i} }
   |         ^^^ an argument of type `ForPropsBuilder_Error_Missing_required_field_key` is missing
   |
note: method defined here
  --> $CARGO/leptos-0.6.12/src/for_loop.rs
   |
   | #[component(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
10 |         For(/* ForPropsBuilder_Error_Missing_required_field_key */) each=[[1, 2, 3]] |i| { {i} }
   |            ++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: expected a `Fn()` closure, found `str`
  --> tests/ui/errors/com_builder_spans.rs:17:14
   |
17 |         Show when={"no"} {
   |              ^^^^ expected an `Fn()` closure, found `str`
   |
   = help: the trait `Fn()` is not implemented for `str`, which is required by `&str: FnOnce()`
   = note: wrap the `str` in a closure with no arguments: `|| { /* code */ }`
   = note: required for `&str` to implement `FnOnce()`
note: required by a bound in `ShowPropsBuilder::<W, (__children, (), __fallback)>::when`
  --> $CARGO/leptos-0.6.12/src/show.rs
   |
   |     when: W,
   |     ---- required by a bound in this associated function
...
   |     W: Fn() -> bool + 'static,
   |                ^^^^ required by this bound in `ShowPropsBuilder::<W, (__children, (), __fallback)>::when`

error[E0277]: expected a `Fn()` closure, found `str`
  --> tests/ui/errors/com_builder_spans.rs:17:9
   |
17 |         Show when={"no"} {
   |         ^^^^ expected an `Fn()` closure, found `str`
   |
   = help: the trait `Fn()` is not implemented for `str`, which is required by `&str: Fn()`
   = note: wrap the `str` in a closure with no arguments: `|| { /* code */ }`
   = note: required for `&str` to implement `Fn()`
note: required by a bound in `leptos::Show`
  --> $CARGO/leptos-0.6.12/src/show.rs
   |
   | pub fn Show<W>(
   |        ---- required by a bound in this function
...
   |     W: Fn() -> bool + 'static,
   |        ^^^^^^^^^^^^ required by this bound in `Show`

error[E0599]: the method `children` exists for struct `ShowPropsBuilder<&str, ((), (&str,), ())>`, but its trait bounds were not satisfied
  --> tests/ui/errors/com_builder_spans.rs:18:13
   |
16 |       _ = mview! {
   |  _________-
17 | |         Show when={"no"} {
18 | |             "hi"
   | |            -^^^^ method cannot be called on `ShowPropsBuilder<&str, ((), (&str,), ())>` due to unsatisfied trait bounds
   | |____________|
   |
   |
   = note: the following trait bounds were not satisfied:
           `str: std::ops::Fn<()>`
           which is required by `<&str as FnOnce<()>>::Output = bool`
           `str: FnOnce<()>`
           which is required by `<&str as FnOnce<()>>::Output = bool`

error[E0277]: expected a `Fn()` closure, found `bool`
  --> tests/ui/errors/com_builder_spans.rs:25:14
   |
25 |         Show when={true} {
   |              ^^^^ expected an `Fn()` closure, found `bool`
   |
   = help: the trait `Fn()` is not implemented for `bool`
   = note: wrap the `bool` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `ShowPropsBuilder::<W, (__children, (), __fallback)>::when`
  --> $CARGO/leptos-0.6.12/src/show.rs
   |
   |     when: W,
   |     ---- required by a bound in this associated function
...
   |     W: Fn() -> bool + 'static,
   |        ^^^^^^^^^^^^ required by this bound in `ShowPropsBuilder::<W, (__children, (), __fallback)>::when`

error[E0277]: expected a `Fn()` closure, found `bool`
  --> tests/ui/errors/com_builder_spans.rs:25:9
   |
25 |         Show when={true} {
   |         ^^^^ expected an `Fn()` closure, found `bool`
   |
   = help: the trait `Fn()` is not implemented for `bool`, which is required by `fn(ShowProps<_>) -> impl leptos::IntoView {leptos::Show::<_>}: leptos::Component<_>`
   = note: wrap the `bool` in a closure with no arguments: `|| { /* code */ }`
   = note: required for `ShowProps<bool>` to implement `leptos::Props`
   = note: required for `fn(ShowProps<bool>) -> impl leptos::IntoView {leptos::Show::<bool>}` to implement `leptos::Component<ShowProps<bool>>`
note: required by a bound in `component_props_builder`
  --> $CARGO/leptos-0.6.12/src/lib.rs
   |
   | pub fn component_props_builder<P: PropsOrNoPropsBuilder>(
   |        ----------------------- required by a bound in this function
   |     _f: &impl Component<P>,
   |               ^^^^^^^^^^^^ required by this bound in `component_props_builder`

error[E0599]: the method `children` exists for struct `ShowPropsBuilder<bool, ((), (bool,), ())>`, but its trait bounds were not satisfied
  --> tests/ui/errors/com_builder_spans.rs:26:13
   |
24 |       _ = mview! {
   |  _________-
25 | |         Show when={true} {
26 | |             "hi"
   | |            -^^^^ method cannot be called on `ShowPropsBuilder<bool, ((), (bool,), ())>` due to unsatisfied trait bounds
   | |____________|
   |
   |
   = note: the following trait bounds were not satisfied:
           `bool: std::ops::Fn<()>`
           `bool: FnOnce<()>`
           which is required by `<bool as FnOnce<()>>::Output = bool`

error[E0308]: mismatched types
  --> tests/ui/errors/com_builder_spans.rs:37:21
   |
37 |         Thing label=[false];
   |               ----- ^^^^^^^ expected `&str`, found closure
   |               |
   |               arguments to this method are incorrect
   |
   = note: expected reference `&'static str`
                found closure `{closure@$DIR/tests/ui/errors/com_builder_spans.rs:37:21: 37:28}`
note: method defined here
  --> tests/ui/errors/com_builder_spans.rs:33:14
   |
33 |     fn Thing(label: &'static str) -> impl IntoView { label }
   |              ^^^^^--------------

error[E0308]: mismatched types
  --> tests/ui/errors/com_builder_spans.rs:48:15
   |
48 |         Thing |s| { "hello" }
   |               ^^^ expected `Box<dyn FnOnce() -> Fragment>`, found closure
   |
   = note: expected struct `Box<(dyn FnOnce() -> Fragment + 'static)>`
             found closure `{closure@$DIR/tests/ui/errors/com_builder_spans.rs:48:15: 48:18}`

error[E0283]: type annotations needed
  --> tests/ui/errors/com_builder_spans.rs:57:9
   |
57 |         Await future=[async { 3 }] { "no args" }
   |         ^^^^^ cannot infer type of the type parameter `V` declared on the function `Await`
   |
   = note: cannot satisfy `_: leptos::IntoView`
   = help: the following types implement trait `leptos::IntoView`:
             &'static str
             &Fragment
             &leptos::View
             &std::string::String
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
           and $N others
note: required by a bound in `leptos::Await`
  --> $CARGO/leptos-0.6.12/src/await_.rs
   |
   | pub fn Await<T, Fut, FF, VF, V>(
   |        ----- required by a bound in this function
...
   |     V: IntoView,
   |        ^^^^^^^^ required by this bound in `Await`
help: consider specifying the generic arguments
   |
57 |         Await::<i32, _, _, VF, V> future=[async { 3 }] { "no args" }
   |              ++++++++++++++++++++

error[E0283]: type annotations needed
  --> tests/ui/errors/com_builder_spans.rs:57:9
   |
57 |         Await future=[async { 3 }] { "no args" }
   |         ^^^^^ cannot infer type of the type parameter `VF` declared on the function `Await`
   |
   = note: multiple `impl`s satisfying `_: ToChildren<{closure@$DIR/tests/ui/errors/com_builder_spans.rs:57:38: 57:47}>` found in the `leptos` crate:
           - impl<F> ToChildren<F> for Box<(dyn FnMut() -> Fragment + 'static)>
             where <F as FnOnce<()>>::Output == Fragment, F: FnMut(), F: 'static;
           - impl<F> ToChildren<F> for Box<(dyn FnOnce() -> Fragment + 'static)>
             where <F as FnOnce<()>>::Output == Fragment, F: FnOnce(), F: 'static;
           - impl<F> ToChildren<F> for Box<(dyn std::ops::Fn() -> Fragment + 'static)>
             where <F as FnOnce<()>>::Output == Fragment, F: Fn(), F: 'static;
           - impl<F> ToChildren<F> for Rc<(dyn std::ops::Fn() -> Fragment + 'static)>
             where <F as FnOnce<()>>::Output == Fragment, F: Fn(), F: 'static;
help: consider specifying the generic arguments
   |
57 |         Await::<i32, _, _, VF, V> future=[async { 3 }] { "no args" }
   |              ++++++++++++++++++++
